--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-react": "^6.11.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "validator": "^5.6.0",
     "webpack": "^1.13.2"
   }
 }
